test/tests/compiler/12_unsigned_integers/invalid_parse/bad_specifiers_2.plx
pub fn main(none) i32 {
    # Can't include the same specifier twice
    i: u64 u64 = 0
    return 0
}
